Fix playlsit delete bugs.

Using the playlist actions instead of removeRow().

Patch by Dennis Francis.

Removed the expandToDepth( 0 ) hack because comment #6 in BR 245646.

BUG:250746
BUG:250750